--- a/CSS-Intermediate/Challenges-Two/style.css
+++ b/CSS-Intermediate/Challenges-Two/style.css
@@ -1,52 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-
-#wrap{
-    background: rgb(71, 62, 88);
-    color: #fff;
-    text-shadow: none;
-    margin-left: 20%;
-    margin-right: 20%;
-    display: flex;
-} 
-#nav{
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(161, 211, 211);
-    margin-left: 50px;
-   
+.col-4 {
+    width: 33%;
 }
-#content{
-   float: right;
+
+.col-6 {
+    width: 50%;
+}
+
+.col-12 {
     width: 100%;
-    margin-right: 50px;
-    background-color: rgb(146, 142, 209);
-    color: black;
 }
 
- 
+@media (min-width: 765px) and (max-width: 960px){
+    .col-4 {
+        width: 50%;
+    }
 
-#content h1{
-    display: flex;
-    justify-content: center;
-    font-weight: bold;
-    font-style: italic;
-}
-#content p{
-    margin: 15px;
-}
-#content ul{
-     margin-left:20% ;
-     margin-right:20% ;
-     font-style: italic;
-     list-style-type: none;
+    .col-6 {
+        width: 100%;
+    }
 }
 
-
-
-#content .copyright{
-    display: flex;
-    font-size: 12px;
-    justify-content: center;
-    
+@media (max-width: 765px){
+    .col-4 {
+        width: 100%;
+    }
 }
